--- a/index.html
+++ b/index.html
@@ -788,6 +788,18 @@
   <div class="cta-mailing-list-form" id="cta-list-463121">
     <form class="simple_form captcha cta-form-list-463121 member" id="new_member_cta" data-sitekey="6LdqEVEbAAAAAPn5e3TfpCQdFin6EZOLcmhS94PJ" data-controller="recaptcha" data-action="captchaDone-&gt;recaptcha#onDone" role="member" action="/news/call_to_action_header_features/463121/join" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="&#x2713;" autocomplete="off" /><input type="hidden" name="_method" value="put" autocomplete="off" />
       <div class="cta-heading-wrapper">
+	      <div class="hero-content">
+  <div class="nav-bar">
+    <a href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
+      <img src="images/icons/instagram-branco.png" alt="Instagram">
+    </a>
+    <a href="https://youtube.com/@cassio_vilacorta" target="_blank">
+      <img src="images/icons/youtube-branco.png" alt="YouTube">
+    </a>
+    <a href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
+      <img src="images/icons/spotify-branco.png" alt="Spotify">
+    </a>
+  </div>
           <h2 class="mailing-list-title heading-primary cta-heading">
             CONHEÇA A HISTÓRIA DE CASSIO VILACORTA
 </h2>      </div>
