--- a/index.html
+++ b/index.html
@@ -703,31 +703,16 @@
 				</div>
 
 				<div class="nav-bar">
-					    
- 
-    <div>
-      <a class="top no-pjax" href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
-        <img src="images/icons/instagram-branco.png" alt="Instagram" style="width: 24px; height: 24px;">
-      </a>
-    </div>
-  
-
-  <!-- YouTube -->
-  
-    <div>
-      <a class="top no-pjax" href="https://youtube.com/@cassio_vilacorta" target="_blank">
-        <img src="images/icons/youtube-branco.png" alt="YouTube" style="width: 24px; height: 24px;">
-      </a>
-    </div>
-
-
-  <!-- Spotify -->
- 
-    <div>
-      <a class="top no-pjax" href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
-        <img src="images/icons/spotify-branco.png" alt="Spotify" style="width: 24px; height: 24px;">
-      </a>
-    </div>
+  <a href="https://www.instagram.com/cassio_vilacorta/" target="_blank">
+    <img src="images/icons/instagram-branco.png" alt="Instagram" style="width: 40px; height: auto;">
+  </a>
+  <a href="https://youtube.com/@cassio_vilacorta" target="_blank">
+    <img src="images/icons/youtube-branco.png" alt="YouTube" style="width: 40px; height: auto;">
+  </a>
+  <a href="https://open.spotify.com/artist/0wH1q7DEIagqkl3zlURPtB" target="_blank">
+    <img src="images/icons/spotify-branco.png" alt="Spotify" style="width: 40px; height: auto;">
+  </a>
+</div>
  
 </ul>
 
