--- a/index.html
+++ b/index.html
@@ -721,40 +721,37 @@
 				</div>
 			</div>
 
-			<div class="media-cta-container">
-				<div id="page_media_container" class="page-media-wrapper">
-   <media-background-container>
-  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-1.jpg);">
-    <picture>
-      <source media="(max-width: 600px)" srcset="images/slides/slide-1.jpg">
-      <source media="(min-width: 601px)" srcset="images/slides/slide-1.jpg 1x, images/slides/slide-1.jpg 2x">
-      <img src="images/slides/slide-1.jpg" alt="Slide 1">
-    </picture>
-  </media-background>
+			
+<div class="media-cta-container">
+  <div id="page_media_container" class="page-media-wrapper">
+    <media-background-container active-index="2">
+      <media-background class="page-photo" style="--image-url: url(images/slides/slide-1.jpg);">
+        <picture>
+          <source media="(max-width: 600px)" srcset="images/slides/slide-1.jpg">
+          <source media="(min-width: 601px)" srcset="images/slides/slide-1.jpg 1x, images/slides/slide-1.jpg 2x">
+          <img src="images/slides/slide-1.jpg" alt="Slide 1">
+        </picture>
+      </media-background>
 
-  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-2.jpg);">
-    <picture>
-      <source media="(max-width: 600px)" srcset="images/slides/slide-2.jpg">
-      <source media="(min-width: 601px)" srcset="images/slides/slide-2.jpg 1x, images/slides/slide-2.jpg 2x">
-      <img src="images/slides/slide-2.jpg" alt="Slide 2">
-    </picture>
-  </media-background>
+      <media-background class="page-photo" style="--image-url: url(images/slides/slide-2.jpg);">
+        <picture>
+          <source media="(max-width: 600px)" srcset="images/slides/slide-2.jpg">
+          <source media="(min-width: 601px)" srcset="images/slides/slide-2.jpg 1x, images/slides/slide-2.jpg 2x">
+          <img src="images/slides/slide-2.jpg" alt="Slide 2">
+        </picture>
+      </media-background>
 
-  <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped" class="page-photo" image-align="center" image-justify="center" vignette="none" background-style="color" opacity="100" fit="horizontal" style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-3.jpg);">
-    <picture>
-      <source media="(max-width: 600px)" srcset="images/slides/slide-3.jpg">
-      <source media="(min-width: 601px)" srcset="images/slides/slide-3.jpg 1x, images/slides/slide-3.jpg 2x">
-      <img src="images/slides/slide-3.jpg" alt="Slide 3">
-    </picture>
-  </media-background>
-</media-background-container>
-
-
-
+      <media-background class="page-photo" style="--image-url: url(images/slides/slide-3.jpg);">
+        <picture>
+          <source media="(max-width: 600px)" srcset="images/slides/slide-3.jpg">
+          <source media="(min-width: 601px)" srcset="images/slides/slide-3.jpg 1x, images/slides/slide-3.jpg 2x">
+          <img src="images/slides/slide-3.jpg" alt="Slide 3">
+        </picture>
+      </media-background>
+    </media-background-container>
+  </div>
 </div>
 
-				
-					
 <div id="default-page-header" class="default-page-header-area"><moda-sections class="zoogle-content" data-arrangement-id="1464080" data-controller="content-width"><moda-section class="moda m-section m-shape m-masked m-style-feature-row-5084808 zoogle-columns zoogle-columns-1 zoogle-columns-100 default-section-style padding-none title-alignment-left block block-row layout_full" data-row-id="5084808" id="feature_row_5084808" variant="1">
   
   
