--- a/index.html
+++ b/index.html
@@ -805,6 +805,21 @@
           </div>
       </div>
 </form>
+	  <div id="page_media_container" class="page-media-wrapper">
+  <media-background-container active-index="0">
+    <media-background crop-rect="" focal-point="" original-width="1920" original-height="1080" mode="cropped"
+      class="page-photo -is-active" image-align="center" image-justify="center" vignette="none"
+      background-style="color" opacity="100" fit="horizontal"
+      style="--media-background-opacity: 100%; --image-url: url(images/slides/slide-3.jpg);">
+      <picture>
+        <source media="(max-width: 600px)" srcset="images/slides/slide-3.jpg">
+        <source media="(min-width: 601px)" srcset="images/slides/slide-3.jpg 1x, images/slides/slide-3.jpg 2x">
+        <img src="images/slides/slide-3.jpg" alt="Cassio Vilacorta Background">
+      </picture>
+    </media-background>
+  </media-background-container>
+</div>
+
     <script>
       function cta_submitInvisibleRecaptchaForm_list_463121() {
         $(".cta-form-list-463121").submit();
